deployment/blazor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blazor-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blazor-app
  template:
    metadata:
      labels:
        app: blazor-app
    spec:
      containers:
        - name: blazor-app
          image: blazor-app:latest
          ports:
            - containerPort: 80
