deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: blazor-app
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089s
  type: NodePort
